# Template_aio_bot

./: .gitignore  README.rst  app.py  loader.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5dfd4dabf5d3_first_migration.py
data/: config.py  locations.py
filters/: __init__.py  forwarded_message.py  is_admin.py  private_chat.py
handlers/: __init__.py
handlers/channels/: new_post.py
handlers/errors/: error_handler.py
handlers/groups/: edit_chat.py  moderate_chat.py  service_messages.py
handlers/inline_mode/: inline.py
handlers/users/: __init__.py  admin.py  catch_media.py  echo.py  get_contact.py  get_location.py  help.py  interview.py  menu.py  poster.py  promotion.py  purchase.py  sending_cats.py  start.py  update_db.py  update_email.py
keyboards/default/: contact_buttons.py  keyboard_menu.py  location_buttons.py
keyboards/inline/: calback_datas.py  choice_button.py  manage_post.py  subscription.py
middlewares/: __init__.py  database.py  throttling.py
states/: __init__.py  interview.py
utils/: calc_distance.py  notify_admins.py  set_bot_commands.py
utils/db_api/: db_gino.py  quick_command.py  sqlite.py  test.py  tests_db.py  user.py
utils/db_api/shemas/: user.py
utils/misc/: __init__.py  logging.py
