[tool.poetry]
name = "aio-bot"
version = "0.1.0"
description = "Telegram bot learning"
authors = ["Aleksan <Dev.aleksan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.12"
environs = "^9.3.1"
loguru = "^0.5.3"
gino = "^1.0.1"
alembic = "^1.5.8"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
